--- a/bed_mesh.cfg
+++ b/bed_mesh.cfg
@@ -1,6 +1,38 @@
 [bed_mesh]
-speed: 120
+speed: 250
 horizontal_move_z: 5
-mesh_min: 35,6
-mesh_max: 80, 100
-probe_count: 3,3
+mesh_min: 4,5
+mesh_max: 89, 107
+#mesh_pps: 2,3
+move_check_distance: 3.0
+split_delta_z: .01
+probe_count: 5,5
+algorithm: bicubic
+relative_reference_index: 12
+
+# ~~~probe homing~~~
+[safe_z_home]
+home_xy_position: 60,60
+speed: 100
+z_hop: 15
+z_hop_speed: 5
+
+[bed_screws]
+screw1: 60,5
+screw1_name: front screw
+screw2: 5,110
+screw2_name: back left
+screw3: 110,110
+screw3_name: back right
+
+
+[screws_tilt_adjust]
+screw1: 60,26
+screw1_name: front screw
+screw2: 5,113
+screw2_name: back left
+screw3: 110,113
+screw3_name: back right
+horizontal_move_z: 10.
+speed: 50.
+screw_thread: CW-M3
