--- a/probe.cfg
+++ b/probe.cfg
@@ -1,6 +1,9 @@
 [probe]
 pin: ^P1.27
-x_offset: 119
-y_offset: 118
-z_offset: 8
-speed: 40
+x_offset: -30.7
+y_offset: -13
+z_offset: 1.399
+samples: 3
+speed: 100
+samples_tolerance: 0.010
+samples_tolerance_retries: 4
