--- a/fan.cfg
+++ b/fan.cfg
@@ -19,10 +19,11 @@ cycle_time: 0.010
 
 [controller_fan case_fan]
 pin: P1.24
-max_power: 0.8
+max_power: 0.2
 shutdown_speed: 0
 cycle_time: 0.010
 hardware_pwm: False
 kick_start_time: 0.100
 idle_timeout: 30
 idle_speed: 0.8
+stepper: stepper_y
